--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
           <h3>COEWAKABIU in</h3>
           <h2>Partnership with <span>ICDL</span> Now</h2>
           <p>
-            ICDL Certification is now available in JSCOELS, Nigeria & over 100
-            Countries, via more than 20 thousand Test Centres. Over the last 22
-            years, over 70 Million ICDL tests have been completed by more than
-            16 million people worldwide.
+            ICDL Certification is now available in COEWAKABIU, Nigeria & over
+            100 Countries, via more than 20 thousand Test Centres. Over the last
+            22 years, over 70 Million ICDL tests have been completed by more
+            than 16 million people worldwide.
           </p>
           <section class="hero__buttons">
             <a href="#" class="btn btn--primary" onclick="toggleModal()"
@@ -337,9 +337,9 @@
 
         <section class="instructors-list">
           <section class="instructor">
-            <img src="./assets/img/inst1.jpeg" alt="" />
+            <img src="./assets/img/Man Salihu.png" alt="" />
             <section class="instructor__name">
-              <h3 class="heading-2">John Doe</h3>
+              <h3 class="heading-2">Man Salihu</h3>
               <p>ICDL Instructor</p>
             </section>
             <section class="instructor__socials">
@@ -357,9 +357,9 @@
           </section>
 
           <section class="instructor">
-            <img src="./assets/img/inst1.jpeg" alt="" />
+            <img src="./assets/img/Birma Mustapha Dawi.jpeg" alt="" />
             <section class="instructor__name">
-              <h3 class="heading-2">John Doe</h3>
+              <h3 class="heading-2">Birma Mustapha Dawi</h3>
               <p>ICDL Instructor</p>
             </section>
             <section class="instructor__socials">
@@ -377,9 +377,9 @@
           </section>
 
           <section class="instructor">
-            <img src="./assets/img/inst1.jpeg" alt="" />
+            <img src="./assets/img/Umar Hassan.jpeg" alt="" />
             <section class="instructor__name">
-              <h3 class="heading-2">John Doe</h3>
+              <h3 class="heading-2">Umar Hassan</h3>
               <p>ICDL Instructor</p>
             </section>
             <section class="instructor__socials">
@@ -397,9 +397,9 @@
           </section>
 
           <section class="instructor">
-            <img src="./assets/img/inst1.jpeg" alt="" />
+            <img src="./assets/img/Ibrahim Ali.jpeg" alt="" />
             <section class="instructor__name">
-              <h3 class="heading-2">John Doe</h3>
+              <h3 class="heading-2">Ibrahim Ali</h3>
               <p>ICDL Instructor</p>
             </section>
             <section class="instructor__socials">
@@ -430,18 +430,22 @@
           <article class="testimony">
             <section class="testimony__text">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint,
-                possimus odit. Iusto nisi accusantium culpa omnis! Fugit cumque
-                consequuntur iure vel officiis unde rem at. Asperiores,
-                veritatis est. Quia, beatae!
+                I took ICDL course as a training to improve my skills in word
+                and spreadsheet and other packages as an academic. The tutorial
+                was thorough and well taught. The most interesting part of the
+                the training was the test questions which were standard and
+                covers everything taught. I am proud to be one of those that
+                made the required 75+ mark. I strongly recommend the course to
+                students and lecturers willing to excel in the teaching and
+                learning field.
               </p>
               <section class="speech-icon"></section>
             </section>
             <section class="student">
-              <img src="./assets/img/student3.jpeg" alt="" />
+              <img src="./assets/img/Yuba Asugu Garba.png" alt="" />
               <section>
-                <h3>John Doe</h3>
-                <p>Developer</p>
+                <h3>Yuba Asugu Garba</h3>
+                <p>Academician</p>
               </section>
             </section>
           </article>
